--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
 
     <base target="_blank">
 
-    <title>Capture</title>
+    <title>みゅざわ</title>
 
 </head>
 
 <body>
+    <h1>みゅざわ</h1>
+
     <button id="login" onclick="login()">Spotifyログイン</button>
 
     <div id="video_container" style="display: none;">
